force-app/main/default/objects/OpportunityLineItem/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID(Opportunity.AccountId)</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>