force-app/main/default/objects/OpportunityLineItem/fields/AF__c.field-meta.xml
<CustomField>
    <fullName>AF__c</fullName>
    <defaultValue>1</defaultValue>
    <label>AF%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>