force-app/main/default/objects/OpportunityLineItem/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <formula>PricebookEntry.Availability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability</label>
    <type>Text</type>
</CustomField>