force-app/main/default/objects/OpportunityLineItem/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <label>Order Item Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>