force-app/main/default/objects/OpportunityLineItem/fields/DiscountedPriceItemGroup__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPriceItemGroup__c</fullName>
    <label>Discounted Price Item Group</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>