force-app/main/default/objects/OpportunityLineItem/fields/DiscountWholeSale__c.field-meta.xml
<CustomField>
    <fullName>DiscountWholeSale__c</fullName>
    <defaultValue>0.235</defaultValue>
    <label>Discount Whole Sale%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>