force-app/main/default/objects/OpportunityLineItem/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <formula>PricebookEntry.Product2.EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>