force-app/main/default/objects/OpportunityLineItem/fields/EditionType__c.field-meta.xml
<CustomField>
    <fullName>EditionType__c</fullName>
    <formula>PricebookEntry.EdtionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition type</label>
    <type>Text</type>
</CustomField>