force-app/main/default/objects/OpportunityLineItem/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email address</label>
    <type>Email</type>
</CustomField>