force-app/main/default/objects/OpportunityLineItem/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Group description on Quotes</inlineHelpText>
    <label>Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>