force-app/main/default/objects/OpportunityLineItem/fields/Group_Order__c.field-meta.xml
<CustomField>
    <fullName>Group_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Sorting of Groups in Quotes</inlineHelpText>
    <label>Group Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>