force-app/main/default/objects/OpportunityLineItem/fields/Is_Product_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Active__c</fullName>
    <formula>PricebookEntry.Product2.IsActive</formula>
    <label>Is Product Active</label>
    <type>Checkbox</type>
</CustomField>