force-app/main/default/objects/OpportunityLineItem/fields/ISBNOrArticleCode__c.field-meta.xml
<CustomField>
    <fullName>ISBNOrArticleCode__c</fullName>
    <description>Takes the ISBN or Article Code from a Product</description>
    <formula>PricebookEntry.Product2.ISBNArticleNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISBN / Article Code</label>
    <type>Text</type>
</CustomField>