force-app/main/default/objects/OpportunityLineItem/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <formula>Opportunity.IsClosed = False</formula>
    <label>IsOpen</label>
    <type>Checkbox</type>
</CustomField>