force-app/main/default/objects/OpportunityLineItem/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>