force-app/main/default/objects/OpportunityLineItem/fields/ItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Group</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Item Group</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>