force-app/main/default/objects/OpportunityLineItem/fields/LicenseDuration__c.field-meta.xml
<CustomField>
    <fullName>LicenseDuration__c</fullName>
    <label>License Duration</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>