force-app/main/default/objects/OpportunityLineItem/fields/ListPriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Price Discount</label>
    <referenceTo>ListPriceDiscount__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>