force-app/main/default/objects/OpportunityLineItem/fields/ListPriceDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountRate__c</fullName>
    <formula>ListPriceDiscount__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>