force-app/main/default/objects/OpportunityLineItem/fields/ListPriceItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ListPriceItemGroup__c</fullName>
    <label>List Price Item Group</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>