force-app/main/default/objects/OpportunityLineItem/fields/ManualDiscount__c.field-meta.xml
<CustomField>
    <fullName>ManualDiscount__c</fullName>
    <label>ManualDiscount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ManualDiscountType</valueSetName>
    </valueSet>
</CustomField>