force-app/main/default/objects/OpportunityLineItem/fields/ManualDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>ManualDiscountPercent__c</fullName>
    <label>Manual Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>