force-app/main/default/objects/OpportunityLineItem/fields/ManualDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>ManualDiscountValue__c</fullName>
    <label>Manual Discount Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>