force-app/main/default/objects/OpportunityLineItem/fields/NetsuiteQuantity__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteQuantity__c</fullName>
    <label>Netsuite Quantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>