force-app/main/default/objects/OpportunityLineItem/fields/NumberOfRevenueInstallments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRevenueInstallments__c</fullName>
    <formula>PricebookEntry.Product2.NumberOfRevenueInstallments</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Most Common = 12</inlineHelpText>
    <label>Number Of Revenue Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>