force-app/main/default/objects/OpportunityLineItem/fields/OpportunityLineProductRenewalBoolean__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineProductRenewalBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An Actual Checkbox - set by Process Builder - to quickly filter the OpportunityLineItems (Products) on either (Record)Type &apos;Recurring&apos; or not. 
We need an Actual Checkbox (and not a formula) to use it in a Roll-Up Summary and display &apos;Contract Value&apos; on the Opportunity.</description>
    <label>OpportunityLineProductRenewalBoolean</label>
    <type>Checkbox</type>
</CustomField>