force-app/main/default/objects/OpportunityLineItem/fields/OpportunityMethod__c.field-meta.xml
<CustomField>
    <fullName>OpportunityMethod__c</fullName>
    <formula>Opportunity.Method__c</formula>
    <label>Opportunity Method</label>
    <type>Text</type>
</CustomField>