force-app/main/default/objects/OpportunityLineItem/fields/OpportunityOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerId__c</fullName>
    <label>OpportunityOwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>