force-app/main/default/objects/OpportunityLineItem/fields/OrderLineType__c.field-meta.xml
<CustomField>
    <fullName>OrderLineType__c</fullName>
    <label>Order Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderLineType</valueSetName>
    </valueSet>
</CustomField>