force-app/main/default/objects/OpportunityLineItem/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <formula>PricebookEntry.PackageType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package type</label>
    <type>Text</type>
</CustomField>