force-app/main/default/objects/OpportunityLineItem/fields/PricebookID__c.field-meta.xml
<CustomField>
    <fullName>PricebookID__c</fullName>
    <formula>Opportunity.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricebookId</label>
    <type>Text</type>
</CustomField>