force-app/main/default/objects/OpportunityLineItem/fields/ProductComponent__c.field-meta.xml
<CustomField>
    <fullName>ProductComponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Component</label>
    <referenceTo>ProductComponent__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>