force-app/main/default/objects/OpportunityLineItem/fields/ProductEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProductEndDate__c</fullName>
    <formula>if(NOT(ISBLANK(LicenseDuration__c)),ADDMONTHS(ServiceDate,LicenseDuration__c )-1, ADDMONTHS(ServiceDate,Terms__c )-1)</formula>
    <label>Product End date</label>
    <type>Date</type>
</CustomField>