force-app/main/default/objects/OpportunityLineItem/fields/ProductFamilyType__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyType__c</fullName>
    <label>ProductFamilyType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>