force-app/main/default/objects/OpportunityLineItem/fields/ProRataProduct__c.field-meta.xml
<CustomField>
    <fullName>ProRataProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a pro rata product?</description>
    <inlineHelpText>Is this a pro rata product?</inlineHelpText>
    <label>Pro Rata Product</label>
    <type>Checkbox</type>
</CustomField>