force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Product__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Product__c</fullName>
    <description>An formula Checkbox to quickly filter the OpportunityLineItems (Products) on either (Record)Type &apos;Recurring&apos; or not.
Used in the Process Builder that (also) sets &quot;OpportunityLineProductRenewalBoolean__c&quot;.</description>
    <formula>PricebookEntry.Product2.RecurringProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Product?</label>
    <type>Checkbox</type>
</CustomField>