force-app/main/default/objects/OpportunityLineItem/fields/RevenueInstallmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>RevenueInstallmentPeriod__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.RevenueInstallmentPeriod)</formula>
    <inlineHelpText>Most Common = Monthly</inlineHelpText>
    <label>Revenue Installment Period</label>
    <type>Text</type>
</CustomField>