force-app/main/default/objects/OpportunityLineItem/fields/RevenueScheduleType__c.field-meta.xml
<CustomField>
    <fullName>RevenueScheduleType__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.RevenueScheduleType)</formula>
    <inlineHelpText>Most Common = Repeat...</inlineHelpText>
    <label>Revenue Schedule Type</label>
    <type>Text</type>
</CustomField>