force-app/main/default/objects/OpportunityLineItem/fields/SalesSeason__c.field-meta.xml
<CustomField>
    <fullName>SalesSeason__c</fullName>
    <formula>TEXT(Opportunity.Salesseason__c)</formula>
    <label>Sales season</label>
    <type>Text</type>
</CustomField>