force-app/main/default/objects/OpportunityLineItem/fields/Sortorder__c.field-meta.xml
<CustomField>
    <fullName>Sortorder__c</fullName>
    <inlineHelpText>Sorting of Products within Groups</inlineHelpText>
    <label>Item Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>