force-app/main/default/objects/OpportunityLineItem/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <description>This field is dedicated to recording the number of students as separate value next to quantity. This field is no subjetc to any calculations as it will only be used for reporting purposes.</description>
    <inlineHelpText>This field is dedicated to recording the number of students as separate value next to quantity. This field is NOT subject to any price/revenue calculations</inlineHelpText>
    <label>Students</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>