force-app/main/default/objects/OpportunityLineItem/fields/SubtotalValue__c.field-meta.xml
<CustomField>
    <fullName>SubtotalValue__c</fullName>
    <description>NOT FOR LAYOUT
Used for a Roll-up Summary on Opportunity to calculate overall Discount percentage.</description>
    <label>Subtotal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>