force-app/main/default/objects/OpportunityLineItem/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>The product period in number of months.</description>
    <inlineHelpText>The product period in number of months.</inlineHelpText>
    <label>Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>