force-app/main/default/objects/OpportunityLineItem/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total Amount of the Opportunity product for the whole period</description>
    <inlineHelpText>For License products: Price*Quantity*terms (terms: non-ProRata products are always rounded to whole years).
For Consultancy: Price * Quantity</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>