force-app/main/default/objects/OpportunityLineItem/fields/TotalAmountFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountFormula__c</fullName>
    <description>Total Amount of the Order Product</description>
    <formula>IF( ProductFamily__c = &apos;License&apos;,
     IF(ProRataProduct__c = true, 
	(UnitPrice / 12) * Terms__c * Quantity, 
	UnitPrice * Quantity * CEILING(Terms__c/12)
	),
	 UnitPrice*Quantity
	 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For License products: Price*quantity*terms (terms are calculated differently for non-ProRata, always round to whole years).
For Consultancy: Price * quantity</inlineHelpText>
    <label>Total Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>