force-app/main/default/objects/OpportunityLineItem/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>