force-app/main/default/objects/OpportunityLineItem/fields/WorkOrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderDeliveryDate__c</fullName>
    <description>Only applies to Contracts of Type &apos;Work Order&apos;.</description>
    <inlineHelpText>The Date when the Work Order should be Fulfilled / Delivered to the Account / Customer.</inlineHelpText>
    <label>Work Order - Delivery Date</label>
    <type>Date</type>
</CustomField>