force-app/main/default/objects/OpportunityLineItem/validationRules/CantEditClosedOpportunityProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>CantEditClosedOpportunityProducts</fullName>
    <active>false</active>
    <errorConditionFormula>Or(Text(Opportunity.StageName) = &apos;Closed Won&apos;,Text(Opportunity.StageName) = &apos;Closed Lost&apos;)</errorConditionFormula>
    <errorMessage>Can&apos;t Edit Closed Opportunity Products</errorMessage>
</ValidationRule>